# moestuin2

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  docker-compose.yml
.claude/skills/ci-checks/: SKILL.md
.claude/skills/pi-hardware/: SKILL.md
.claude/skills/rust-backend/: SKILL.md
.claude/skills/svelte-frontend/: SKILL.md
.githooks/: pre-commit
.github/workflows/: backend.yml  frontend.yml
deploy/: Caddyfile  install.sh  moestuin-backup.service  moestuin-backup.sh  moestuin-backup.timer  moestuin-webcam.service  moestuin-webcam.sh  moestuin.env.example  moestuin.service
deploy/backup/: Dockerfile  backup.sh
deploy/webcam/: Dockerfile  capture.sh
server/: .dockerignore  Cargo.toml  Dockerfile
server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  readings.rs  sensors.rs  session_store.rs  webcam.rs
server/tests/: auth.rs  webcam.rs
server/tests/snapshots/: auth__me_requires_auth_then_returns_user_after_dev_login.snap  webcam__archive_day_returns_url_when_present.snap  webcam__archive_list_excludes_today_and_is_newest_first.snap  webcam__live_returns_most_recent_playlist.snap  webcam__live_returns_null_when_no_playlist.snap
web/: .dockerignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: AuthGuard.svelte  HlsPlayer.svelte  SensorGraph.svelte  Spinner.svelte  ThemeToggle.svelte  api.test.ts  api.ts  readings.ts  session.ts  theme.ts  webcam.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/(app)/: +layout.svelte  +page.svelte
web/src/routes/(app)/webcam/: +page.svelte
web/src/routes/login/: +page.svelte
web/tests/: auth.e2e.ts  dashboard.e2e.ts  webcam.e2e.ts
