[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie", "cookie-signed"] }
axum-security = { git = "https://github.com/joeydewaal/axum-security.git", version = "0.0.1", features = ["cookie", "jwt", "oauth2", "jiff", "oidc"] }
dotenvy = "0.15.7"
jiff = { version = "0.2.23", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toasty = "0.4.0"
tokio = { version = "1.52.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["compression-br", "compression-gzip", "trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.23.0", features = ["v7", "serde"] }

[dev-dependencies]
insta = { version = "1.47.2", features = ["json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
