[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
axum-security = { git = "https://github.com/joeydewaal/axum-security.git", version = "0.0.1", features = ["cookie", "jwt", "oauth2", "jiff", "oidc"] }
dotenvy = "0.15.7"
futures-util = "0.3.32"
jiff = { version = "0.2.23", features = ["serde"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toasty = { git = "https://github.com/tokio-rs/toasty.git", features = ["sqlite", "serde", "jiff"] }
tokio = { version = "1.52.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tower-http = { version = "0.6.8", features = ["compression-br", "compression-gzip", "trace", "cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.0", features = ["v7", "serde"] }

[dev-dependencies]
insta = { version = "1.47.2", features = ["json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
tempfile = "3"
